<resources>
    <string name="app_name">LocationHunt</string>
    <string name="location_hunt_title">Location Hunt</string>
    <string name="login_text">Login</string>
    <string name="create_account_text">Create Account</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="start_a_hunt_text">Start a Hunt</string>
    <string name="start_hunt_text">Start Hunt</string>
    <string name="new_location_text">New Location</string>
    <string name="reset_location">Reset Location</string>
    <string name="username">Username</string>
    <string name="greeting">Hello, %1$s!</string>
    <string name="distance_filter_text">Maximum distance: %1$s miles away</string>
    <string name="view_past_hunts">View Past Hunts</string>
    <string name="location_card_hint">Hint: %1$s</string>
    <string name="location_card_distance">Distance: %1$.1f miles</string>
    <string name="lets_go">Let\'s Go!</string>

    <string name="past_hunts">Past Hunts</string>
    <string name="info_display">%1$s: %2$s</string>
    <string name="distance_from_destination_string">Distance from destination:</string>
    <string name="title_activity_end_game">EndGameActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="hint">Hint:</string>
    <string name="you_found_the_location_string">You found the location!</string>
    <string name="return_home_string">RETURN HOME</string>
</resources>