<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/start_hunt_for_location_button"
        android:layout_width="296dp"
        android:layout_height="64dp"
        android:layout_marginBottom="60dp"
        android:onClick="startHunt"
        android:text="@string/lets_go"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/location_info_hint"
        android:layout_width="326dp"
        android:layout_height="52dp"
        android:layout_marginTop="56dp"
        android:text="@string/location_card_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/location_info_distance"
        android:layout_width="329dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:text="@string/location_card_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_info_hint" />
</androidx.constraintlayout.widget.ConstraintLayout>